# cpp-parallel-executor

./: CMakeLists.txt  DataEvent.cpp  DataEvent.h  Device.h  DeviceA.cpp  DeviceA.h  DeviceB.cpp  DeviceEvent.cpp  DeviceEvent.h  EventQueue.cpp  EventQueue.h  Parser.cpp  Parser.h  README.md  StartedEvent.cpp  StartedEvent.h  WorkDoneEvent.cpp  WorkDoneEvent.h
src/: DataEvent.cpp  DataEvent.h  Device.h  DeviceA.cpp  DeviceB.cpp  DeviceB.h  DeviceEvent.cpp  DeviceEvent.h  Event.h  EventQueue.cpp  EventQueue.h  Parser.cpp  Parser.h  StartedEvent.cpp  StartedEvent.h  WorkDoneEvent.cpp  WorkDoneEvent.h  main.cpp
tests/: Test_Devices.cpp  Test_EventQueue.cpp  Test_Events.cpp  Test_Parser.cpp
